--- a/server/Vagrantfile
+++ b/server/Vagrantfile
@@ -16,6 +16,7 @@ Vagrant.configure("2") do |config|
     chef.nodes_path = "./chef-repo/cookbooks"
     chef.run_list = [
       "recipe[iptables::disabled]",
+      "recipe[firewall::disable_firewall]",
       "role[web]",
       "role[db]"
     ]
