--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,11 @@
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
+    "loopback-component-passport": "^3.10.0",
     "loopback-connector-mongodb": "^3.9.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
   },
