--- a/server/server/model-config.json
+++ b/server/server/model-config.json
@@ -13,10 +13,19 @@
       "./mixins"
     ]
   },
-  "User": {
-    "dataSource": "db"
+  "user": {
+    "dataSource": "mongoDS",
+    "public": true
   },
-  "AccessToken": {
+  "accessToken": {
+    "dataSource": "db",
+    "public": false
+  },
+  "userCredential": {
+    "dataSource": "db",
+    "public": false
+  },
+  "userIdentity": {
     "dataSource": "db",
     "public": false
   },
