--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "compression": "^1.0.3",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.5.2",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.6",
     "helmet": "^3.10.0",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
