--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-cookiejar-support": "^0.4.2",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "tough-cookie": "^2.4.3",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1"
