--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios-cookiejar-support": "^0.4.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^1.9.1",
+    "marked": "^0.5.2",
     "tough-cookie": "^2.4.3",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
