Improve frontend design (#10)
* Update package.json

* temporary commit

* Improve frontend design

--- a/server/providers.json.template
+++ b/server/providers.json.template
@@ -5,10 +5,10 @@
     "strategy": "OAuth2Strategy",
     "clientID": "{google-client-id-1}",
     "clientSecret": "{google-client-secret-1}",
-    "callbackURL": "/auth/google/callback",
-    "authPath": "/auth/google",
-    "callbackPath": "/auth/google/callback",
-    "successRedirect": "/auth/account",
+    "callbackURL": "/api/auth/google/callback",
+    "authPath": "/api/auth/google",
+    "callbackPath": "/api/auth/google/callback",
+    "successRedirect": "/",
     "failureRedirect": "/login",
     "scope": ["email", "profile"],
     "failureFlash": true
@@ -17,10 +17,10 @@
     "provider": "twitter",
     "authScheme": "oauth",
     "module": "passport-twitter",
-    "callbackURL": "/auth/twitter/callback",
-    "authPath": "/auth/twitter",
-    "callbackPath": "/auth/twitter/callback",
-    "successRedirect": "/auth/account",
+    "callbackURL": "/api/auth/twitter/callback",
+    "authPath": "/api/auth/twitter",
+    "callbackPath": "/api/auth/twitter/callback",
+    "successRedirect": "/",
     "failureRedirect": "/login",
     "consumerKey": "{twitter-consumer-key}",
     "consumerSecret": "{twitter-consumer-secret}",
@@ -31,10 +31,10 @@
     "module": "passport-github",
     "clientID": "{github-client-id}",
     "clientSecret": "{github-client-secret}",
-    "callbackURL": "/auth/github/callback",
-    "authPath": "/auth/github",
-    "callbackPath": "/auth/github/callback",
-    "successRedirect": "/auth/account",
+    "callbackURL": "/api/auth/github/callback",
+    "authPath": "/api/auth/github",
+    "callbackPath": "/api/auth/github/callback",
+    "successRedirect": "/",
     "failureRedirect": "/login"
   }
 }
