--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "passport-google-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^3.0.0"
+    "strong-error-handler": "^3.0.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
