Question tags and Certification Categories (#11)
This PR enable us to add tags and categories to question we make.

--- a/server/server/model-config.json
+++ b/server/server/model-config.json
@@ -47,5 +47,13 @@
   "questions": {
     "dataSource": "mongoDS",
     "public": true
+  },
+  "question_tag": {
+    "dataSource": "mongoDS",
+    "public": true
+  },
+  "certification_category": {
+    "dataSource": "mongoDS",
+    "public": true
   }
 }
