--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@voerro/vue-tagsinput": "^1.11.1",
     "axios": "^0.18.0",
     "axios-cookiejar-support": "^0.4.2",
     "bootstrap-vue": "^2.0.0-rc.11",
