--- a/server/server/config.production.json
+++ b/server/server/config.production.json
@@ -1,7 +1,7 @@
 {
   "restApiRoot": "/api",
   "host": "0.0.0.0",
-  "port": 80,
+  "port": 3000,
   "remoting": {
     "context": false,
     "rest": {
@@ -19,5 +19,5 @@
     },
     "cors": false
   },
-  "cookieSecret": "__FOR_DEVELOP__"
+  "cookieSecret": "__FOR_PRODUCTION__"
 }
