--- a/chef-repo/site-cookbooks/install-pm2/.kitchen.yml
+++ b/chef-repo/site-cookbooks/install-pm2/.kitchen.yml
@@ -19,7 +19,7 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[install_pm2::default]
+      - recipe[install-pm2::default]
     verifier:
       inspec_tests:
         - test/integration/default
